# scratch

./: .gitignore  LICENSE  Makefile  mypy.ini  pyproject.toml  update_jira_timetracking.py
autofill_timetracking/: monkeypatch_selenium.py
autofill_timetracking/actions/: __init__.py  enter_credentials.py  log_time_in_jira_clockify.py  login_to_jira.py
scratch/: update_jira_timetracking.py
scratch/advent_of_code/: day6.py
scratch/advent_of_code/2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day7.py
scratch/autofill_timetracking/: __init__.py  by.py  logger.py  monkeypatch_selenium.py  readabledelta.py  selenium_module.py
scratch/autofill_timetracking/ability/: __init__.py  authenticate.py  authenticate_with_2fa.py  manage_browser_localstorage.py
scratch/autofill_timetracking/actions/: __init__.py  conditionally.py  custom_expected_conditions.py  enter_2fa.py  enter_credentials.py  log_time_in_jira_clockify.py  login_to_jira.py  scroll_into_view.py  see.py  see_all_of.py  see_any_of.py  wait.py  wait_for_animation.py
scratch/autofill_timetracking/question/: __init__.py  computed_style.py
scratch/autofill_timetracking/tasks/: log_time_in_jira_clockify.py  login_to_jira.py
scratch/playing/: abstracting_webdriverwait.py  find_duplicate_messages_in_apache_log.py  function_overload_annotation.py  jira_stuff.json  mock_autospec_attribute.py  not_zero_annotation.py  pay_period_shift_split.py  playing_with_annotations.py  playing_with_bisect.py  playing_with_datetime.py  playing_with_datetime_annotation.py  playing_with_get_args.py  playing_with_literals.py  playing_with_mypy_class_constructor.py  playing_with_typeddict.py  playing_with_walltime.py  playing_with_yield_from.py  plaything_with_paramspec.py  pycharm_python.py  rdd_strftime.py  speedtest.py  string_replace.py  type_hint_contra.py  type_hint_covariance.py  unique_random_ssn.py  words_per_minute_simulation.py
scratch/playing/finalgenerator/: actor1.py  actor2.py  actor3.py  async1.py  async2.py  cm.py  compiler1.py  compiler2.py  fib1.py  inline2.py  inline_final.py  inline_future.py  inline_iter.py  inline_puzzle.py  inline_recursive.py  simplefuture.py  tactor.py
scratch/playing/generators/: apachelog.py  broadcast.py  bytesgen.py  consumer.py  downloads.py  fieldmap.py  follow.py  gencat.py  genfind.py  gengrep.py  genlog.py  genmessages.py  genopen.py  genpickle.py  genqueue.py  genreceive.py  genshutdown.py  gentrace.py  hosts.py  largefiles.py  largest.py  linesdir.py  logcoroutine.py  makebig.py  msgtest.py  netsend.py  nongenlog.py  query404.py  realtime404.py  receivefrom.py  redict.py  retuple.py  robots.py  runservers.py  sendto.py  shutdownevt.py  storelast.py  thrsend.py
scratch/playing/generators/run/foo/: logsim.py
scratch/sample_pytest/: conftest.py  pytest.ini  test_1.py
