[tool.poetry]
name = "scratch"
version = "0.1.1"
description = ""
authors = ["Marcel Wilson <trenchrats@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
clockify-api-client = ">=0.1.0"
python-dateutil = "*"
pytz = "*"
jira = ">=3.4.0"
#pyderman = "^3.3.0"
semantic-version = ">=2.10.0"
requests = "*"
screenpy = "*"
#screenpy = { git = "git@github.com:ScreenPyHQ/screenpy.git", branch = "trunk"}
screenpy-selenium = { git = "git@github.com:ScreenPyHQ/screenpy_selenium.git", branch = "trunk"}
screenpy-pyotp = "^4.0.1"
keyring = "^23.9.0"
pytest = "*"
setup-selenium-testing = "*"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
ruff = "*"
black = "*"
mypy = "*"
isort = "*"  # used in generate_data
coverage = "*"
setuptools = "*"
types-requests = "*"
types-pytz = "*"
types-python-dateutil = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"
output-format = "concise"
extend-exclude = [
    ".github",
    ".pytest_cache",
    ".venv",
    "venv",
    "dockerfiles",
    "docs",
    ".coverage",
    ".coveragerc",
    ".env",
    ".env.example",
    ".flake8",
    ".gitignore",
    "alembic.ini",
    "bandit.yaml",
    "Makefile",
    "mkdocks.yml",
    "mypy.ini",
    "poetry.lock",
    "pyproject.toml",
    "pytest.ini",
    "README.md",
    ".idea",
    "advent_of_code",
    "playing",
    "sample_pytest",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "RUF059", # unused unpacked variable

    # full rule sets
    "ARG",  # flake8-unused-arguments
    "C90", # mccabe
    "EM",  # flake8-errmsg
    "ERA",  # eradicate (commented out code)
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "G", # flake8-logging-format
    "N", # pep8 naming -- dear lord, leave this off
    "PTH", # flake8-use-pathlib (unclear if we NEED to do this) 
    "SLF", # flake8-self (accessing private members)
    "T20",  # flake8-print
    "TD",  #TODOs (names,dates,etc)

    ###  NOT OPTIONAL. MUST REMAIN AS SET ###
    # these are all completely unnecessary
    "B028", # No explicit `stacklevel` keyword argument found in logging
    "COM812",  # missing trailing comma
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__`
    "D200", # One-line docstring should fit on one line
    "D202", # no blank lines after docstring
    "D203", # one-blank-line-before-class
    "D204", # blank line required after docstring
    "D205", # blank line between summary and description
    "D210", # whitespace
    "D212", # Multi-line summary should start at the first line
    "D214", # Section overindented
    "D301", # Use `r"""` if any backslashes in a docstring
    "D400", # First line should end with a period
    "D401", # imperative mood
    "D403", # first word of 1st line caps
    "D404", # First word of the docstring should not be "This"
    "D405", # Section name should be properly capitalized
    "D406", # Section name should end with a newline 
    "D407", # Missing dashed underline after section
    "D411", # Missing blank line before section
    "D412", # No blank lines allowed between a section header and its content
    "D413", # Missing blank line after last section
    "D415", # First line should end with punctuation
    "E501",   # line too long -- black will take care of this for us
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "PLC0414", # useless-import-alias
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-comparison
    "PT003", # function scope implied 
    "PT011", # pytest.raises(Exception) is too broad
    "S101", # use of assert
    "TC006",  # cast wants str for types (blech!)
    "TRY003",  # Avoid specifying long messages outside the exception class
]

extend-safe-fixes = [
    "ANN201", "ANN202", "ANN204",
    "B011",
    "C419",
    "E711", # Comparison to `None` should be `cond is None`
    "EM101", "EM102",
    "PLR1714",
    "PT003", "PT006", "PT018",
    "RET504",
    "RSE102",
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM110",
    "TCH001", "TCH002", "TCH003", "TCH004",
    "TID252", #absolute import over relative
    "TRY400",
    "UP007", "UP046", "UP047",
    "UP040",
    "W291",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false


[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true


[tool.ruff.lint.flake8-type-checking]
#strict = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.black]
line-length = 88
target-version = ['py312']

# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    \.idea
    | \.git
    | \.mypy_cache
    | \.tox
    | \/scratch\/playing
)

'''
